--- a/Project 1/Chapter 1 Tutorial iPython Notebook.ipynb
+++ b/Project 1/Chapter 1 Tutorial iPython Notebook.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Chapter 1\n",
+    "This is all the code from Chapter 1 of Data Science from Scratch. The code was converted to python 3.5.\n",
+    "It is on GitHub at https://github.com/tylerburnham42/DataScienceCourseWork/blob/Project_1/Project%201/Chapter%201%20Tutorial%20iPython%20Notebook.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Whitespace Formatting"
    ]
   },
