Fixed Chapter Numbers. Added new examples

--- a/Project 1/Chapter 2 Tutorial iPython Notebook.ipynb
+++ b/Project 1/Chapter 2 Tutorial iPython Notebook.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter 1\n",
-    "This is all the code from Chapter 1 of Data Science from Scratch. The code was converted to python 3.5.\n",
+    "## Chapter 2\n",
+    "This is all the code from Chapter 2 of Data Science from Scratch. The code was converted to python 3.5.\n",
     "It is on GitHub at https://github.com/tylerburnham42/DataScienceCourseWork/blob/Project_1/Project%201/Chapter%201%20Tutorial%20iPython%20Notebook.ipynb"
    ]
   },
@@ -2619,6 +2619,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
